--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ NEXTAUTH_SECRET=changeme
 GITHUB_BRANCH=main
 GITHUB_OWNER=
 GITHUB_REPO=
-GITHUB_TOKEN=
+GITHUB_PERSONAL_ACCESS_TOKEN=
+TINA_PUBLIC_IS_LOCAL=false
