--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "TINA_PUBLIC_IS_LOCAL=true concurrently \"tinacms dev\" \"tsc --watch\" \"nodemon dist/app.js\" \"nodemon --watch site eleventy --input='site'\"",
     "dev:prod": "TINA_PUBLIC_IS_LOCAL=false concurrently \"tinacms dev\" \"tsc --watch\" \"nodemon dist/app.js\" \"nodemon --watch site eleventy --input='site'\"",
     "build": "tinacms build --partial-reindex --verbose && eleventy --input='site' && tsc",
+    "start": "node dist/app.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
